<resources>
    <string name="app_name">AudioBooks</string>
    <string name="screen_splash">screen_splash</string>
    <string name="favoritos">Favoritos</string>
    <string name="configuracion">Configuración</string>
    <string name="registro">Registro</string>
    <string name="catalogo">Catálogo</string>
    <string name="acercaDe">Acerca de…</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registar">Registrar</string>
    <string name="volver">Volver</string>
    <string name="detalles">Detalles</string>
    <string name="eliminar">Eliminar</string>
    <string name="reproducir">Reproducir</string>
    <string name="salir">Salir</string>
    <string name="txt_titulo">Título</string>
    <string name="autor">Autor</string>
    <string name="tema">Tema</string>
    <string name="quitar_filtro">Quitar Filtro</string>
    <string name="configurar">Configurar</string>
    <string name="audiobooks">AudioBooks</string>
    <string name="t_tulo">Título</string>
    <string name="descripcion_book">Descripción</string>
    <string name="titulo_book">Título</string>
    <string name="password_reg">Password</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="edit_text_descrip">Esta aplicación ha sido desarrollada como parte del proyecto integrado del C.F.G.S DAM.</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_descrip">E-mail</string>

    <!-- &lt;!&ndash; Strings related to Settings &ndash;&gt;

     &lt;!&ndash; Example General settings &ndash;&gt;
     <string name="pref_header_general">General</string>

     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>

     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
         <item>Always</item>
         <item>When possible</item>
         <item>Never</item>
     </string-array>
     <string-array name="pref_example_list_values">
         <item>1</item>
         <item>0</item>
         <item>-1</item>
     </string-array>

     &lt;!&ndash; Example settings for Data & Sync &ndash;&gt;
     <string name="pref_header_data_sync">Data &amp; sync</string>

     <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
         <item>30 minutes</item>
         <item>1 hour</item>
         <item>3 hours</item>
         <item>6 hours</item>
         <item>Never</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
         <item>15</item>
         <item>30</item>
         <item>60</item>
         <item>180</item>
         <item>360</item>
         <item>-1</item>
     </string-array>

     <string-array name="list_preference_entries">
         <item>Entry 1</item>
         <item>Entry 2</item>
         <item>Entry 3</item>
     </string-array>

     <string-array name="list_preference_entry_values">
         <item>1</item>
         <item>2</item>
         <item>3</item>
     </string-array>

     <string-array name="multi_select_list_preference_default_value"/>

     <string name="pref_title_system_sync_settings">System sync settings</string>

     &lt;!&ndash; Example settings for Notifications &ndash;&gt;
     <string name="pref_header_notifications">Notifications</string>

     <string name="pref_title_new_message_notifications">New message notifications</string>

     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>

     <string name="pref_title_vibrate">Vibrate</string>-->
</resources>
